--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "^3.1.5",
 		"@skeletonlabs/skeleton-svelte": "^1.3.0",
+		"@sveltejs/adapter-node": "^5.2.13",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
@@ -22,6 +23,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
