--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,8 @@
-version: '3.8'
-
 services:
   minimail:
     build: .
-    container_name: minimail
     ports:
       - "3000:3000"
-      - "25:2525"
+      - "2525:2525"
     volumes:
-      - .:/app
-    environment:
-      - NODE_ENV=production
+      - ./data:/data
